force-app/main/default/objects/Marketing_Method__c/Marketing_Method__c.object-meta.xml
<CustomObject>
    <label>Marketing Method</label>
    <nameField>
        <label>Marketing Method Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Methods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>