force-app/main/default/objects/Marketing_Method__c/fields/X1_Year_Earned_Revenue_Factor__c.field-meta.xml
<CustomField>
    <fullName>X1_Year_Earned_Revenue_Factor__c</fullName>
    <label>1 Year Earned Revenue Factor</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>