force-app/main/default/objects/Marketing_Method__c/fields/Year_0_Cancellation_Rate__c.field-meta.xml
<CustomField>
    <fullName>Year_0_Cancellation_Rate__c</fullName>
    <label>Year 0 Cancellation Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>