force-app/main/default/objects/Marketing_Method__c/fields/Year_1_Cancel_Rate__c.field-meta.xml
<CustomField>
    <fullName>Year_1_Cancel_Rate__c</fullName>
    <label>Year 1 Cancel Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>