force-app/main/default/objects/Marketing_Method__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Year_0_Cancellation_Rate__c</columns>
    <columns>Year_1_Cancel_Rate__c</columns>
    <columns>Year_2_Cancel_Rate__c</columns>
    <columns>X1_Year_Earned_Revenue_Factor__c</columns>
    <columns>X5_Year_Earned_Revenue_Factor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>